NXP-30266: cleanup / format